--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
                      0 0 0 #ffffff inset;
       }
       100% {
-        width: 480px;
+        width: 117vh;
         height: 240px;
         background: #fafafa;
         box-shadow:  40px 40px 40px #cccccc,
