--- a/style.css
+++ b/style.css
@@ -1,44 +1,43 @@
 
-  #navbar-brand {
-    font-family: 'Righteous', cursive;
-  }
-  #button-addon2 {
-    background-color: yellow;
-  }
-  .card-title {
-      font-family: 'Playball', cursive;
+#navbar-brand {
+ font-family: 'Righteous', cursive;
+}
+#button-addon2 {
+ background-color: yellow;
+}
+.card-title {
+  font-family: 'Playball', cursive;
       
-  }
-  .container {
-      background: #f0f0f0;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100vw;
-      height: 55vh;
-    }
-    #box {
-      display: none;
-    }
-    #box2 {
-      display: none;
-    }
-    .show {
+}
+.container {
+  background: #f0f0f0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 55vh;
+}
+#box {
+  display: none;
+}
+#box2 {
+  display: none;
+}
+.show {
       
-      border-radius: 20px;
-      width: 60px;
-      height: 60px;
-      background: #f0f0f0;
-      box-shadow:  0 0 0 #cccccc,
+  border-radius: 20px;
+  width: 60px;
+  height: 60px;
+  background: #f0f0f0;
+  box-shadow:  0 0 0 #cccccc,
                    0 0 0 #ffffff,
                     10px 10px 10px #cccccc inset,
                     -10px -10px 10px #ffffff inset;
-      animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s /*infinite */alternate forwards;
+  animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s /*infinite */alternate forwards;
       /* animation-fill-mode: forwards; */
     }
-
-    @keyframes anime {
+ @keyframes anime {
       0% {
         width: 60px;
         height: 60px;
@@ -195,7 +194,7 @@
 }
 #mp3 {
   display: none;
-  width: 60%;
+  width: revert;
   margin: auto;
 }
 footer {
@@ -203,115 +202,103 @@ footer {
   background-color: #fffcec;
   padding: 2vw;
 }
-
-
-/* .social {
-  background: #D0D8DB;
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-
-.social textarea {
-  resize: none;
-} */
-
 .rounded-social-buttons .text {
-color: white;
-font-size: 20px;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
--ms-transform: translate(-50%, -50%);
-white-space: nowrap;
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  white-space: nowrap;
 }
 
 @charset "UTF-8";
 
 .svg-inline--fa {
-vertical-align: -0.200em;
+  vertical-align: -0.200em;
 }
 
 .rounded-social-buttons {
-text-align: center;
+  text-align: center;
 }
 
 .rounded-social-buttons .social-button {
-display: inline-block;
-position: relative;
-cursor: pointer;
-width: 3.125rem;
-height: 3.125rem;
-border: 0.125rem solid transparent;
-padding: 0;
-text-decoration: none;
-text-align: center;
-color: #fefefe;
-font-size: 1.5625rem;
-font-weight: normal;
-line-height: 2em;
-border-radius: 1.6875rem;
-transition: all 0.5s ease;
-margin-right: 0.25rem;
-margin-bottom: 0.25rem;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 3.125rem;
+  height: 3.125rem;
+  border: 0.125rem solid transparent;
+  padding: 0;
+  text-decoration: none;
+  text-align: center;
+  color: #fefefe;
+  font-size: 1.5625rem;
+  font-weight: normal;
+  line-height: 2em;
+  border-radius: 1.6875rem;
+  transition: all 0.5s ease;
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
--webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .rounded-social-buttons .fa-twitter, .fa-facebook-f, .fa-linkedin, .fa-youtube, .fa-instagram {
-font-size: 25px;
+  font-size: 25px;
 }
 
 .rounded-social-buttons .social-button.facebook {
-background: #3b5998;
+  background: #3b5998;
 }
 
 .rounded-social-buttons .social-button.facebook:hover, .rounded-social-buttons .social-button.facebook:focus {
-color: #3b5998;
-background: #fefefe;
-border-color: #3b5998;
+  color: #3b5998;
+  background: #fefefe;
+  border-color: #3b5998;
 }
 
 .rounded-social-buttons .social-button.twitter {
-background: #55acee;
+  background: #55acee;
 }
 
 .rounded-social-buttons .social-button.twitter:hover, .rounded-social-buttons .social-button.twitter:focus {
-color: #55acee;
-background: #fefefe;
-border-color: #55acee;
+  color: #55acee;
+  background: #fefefe;
+  border-color: #55acee;
 }
 
 .rounded-social-buttons .social-button.linkedin {
-background: #007bb5;
+  background: #007bb5;
 }
 
 .rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
-color: #007bb5;
-background: #fefefe;
-border-color: #007bb5;
+  color: #007bb5;
+  background: #fefefe;
+  border-color: #007bb5;
 }
 
 .rounded-social-buttons .social-button.youtube {
-background: #bb0000;
+  background: #bb0000;
 }
 
 .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
-color: #bb0000;
-background: #fefefe;
-border-color: #bb0000;
+  color: #bb0000;
+  background: #fefefe;
+  border-color: #bb0000;
 }
 
 .rounded-social-buttons .social-button.instagram {
-background: #125688;
+  background: #125688;
 }
 
 .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
-color: #125688;
-background: #fefefe;
-border-color: #125688;
+  color: #125688;
+  background: #fefefe;
+  border-color: #125688;
 }
